--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,11 @@
 node_modules/
+# Terraform
+**/.terraform/
+*.tfstate
+*.tfstate.*
+crash.log
+*.tfvars
+*.tfvars.json
+
+# keep this tracked (recommended)
+#!.terraform.lock.hcl
