setup gitops workflow with gha

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,11 +7,11 @@ on:
 
 env:
   AWS_REGION: us-east-2
-  ECR_FRONTEND: <your-account-id>.dkr.ecr.<region>.amazonaws.com/<your-frontend-repo>
-  ECR_BACKEND: <your-account-id>.dkr.ecr.<region>.amazonaws.com/<your-backend-repo>
-  CLUSTER_NAME: <your-ecs-cluster-name>
-  FRONTEND_SVC: <your-frontend-service-name>
-  BACKEND_SVC: <your-backend-service-name>
+  ECR_FRONTEND: 106500537252.dkr.ecr.us-east-2.amazonaws.com/devops-challenge-frontend
+  ECR_BACKEND: 106500537252.dkr.ecr.us-east-2.amazonaws.com/devops-challenge-backend
+  CLUSTER_NAME: devops-challenge-cluster
+  FRONTEND_SVC: devops-challenge-frontend-service
+  BACKEND_SVC: devops-challenge-backend-service
 
 jobs:
   build-and-deploy:
@@ -28,7 +28,7 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v3
         with:
-          role-to-assume: arn:aws:iam::<your-account-id>:role/<your-oidc-role-name>
+          role-to-assume: arn:aws:iam::106500537252:role/githubactions_ecs_ecr
           aws-region: ${{ env.AWS_REGION }}
 
       - name: Login to Amazon ECR
